# scala_ftp_bck

./: README.md  build.sbt
DATABASE/: my_db.mv.db  my_db.trace.db
rust_ftp_bck/: Cargo.toml  README.md
rust_ftp_bck/src/: compress.rs  db.rs  ftp.rs  log.rs  main.rs  sync.rs
src/main/scala/: compress.scala  database.scala  ftp.scala  log.scala  main.scala  sync.scala  utils.scala
