[package]
name = "rust_ftp_bck"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4.39"
colored = "3.0.0"
dialoguer = "0.11.0"
duckdb = { version = "1.2.0", features = ["bundled"] }
prettytable-rs = "0.10.0"
zip_archive = "1.2.2"
curl = "0.4.47"
